# needle-eye

./: .gitignore  README.md  SECURITY.md
Ascomage/: ascomage.css  ascomage.js  cards.js  game.js  hero.js  index.html  log.js  tests.js
DiS/: CMakeLists.txt  folders.MD
DiS/bld/: build
DiS/src/: CMakeCache.txt  Makefile  client.cpp  cmake_install.cmake  server.cpp
DiS/web/: dis.css  dis.js  index.html  logger.js
DiS/web/css/: messages.css  modal.css
DiS/web/wip/: modal.html
Dominaire/: dominaire.css  dominaire.js  index.html
RogueDOM/: defines.js  index.html  main.js
SVGMerchant/: demo.html  double_cursor.html  index.html  matter.html  merch.css
TextMerchant/: base.js  index.html  merch.js  tm.css  tm.js
ascii-draw/: box.js  cursor.js  host.cmd  index.html  unidraw.css  unidraw.js
ascii-react-portal/: controller.js  data.js  go2  index.html  package.json  portal.css  timer.js
ascii-shandalar/: base.js  birth.js  box.js  cards.html  controller.js  defines.js  i18n.js  index.html  intro.js  label.js  locker.js  log.js  main.css  main.js  map.js  svg.html  test.map.html  tween.js  ui.js
codewars/: console.js  decompose.js  index.html  longestslidedown.js  primes.js  primes2.js  screenlockingpatterns.js  sumbyfactors.js
fix-facebook/: bower.json  gulpfile.babel.js  package-lock.json  package.json
idle400/: as400.css  as400.js  index.html
idle_portal/: base.js  colors.css  go2  host2.cmd  index.html  odds.js  portal.css  portal.js  ui.js
korcarmat/: .gitignore  README.md  compile  go  main.c  main.cpp  main.cpp~
landscape6/: index.html
(+66 files in other folders)
